Removed some warning when testing compilation with java 11.